# ADTReduction

./: .gitattributes  .gitignore  README.md  dune-project  dune-workspace  profile.json  profile2.json  profile4.json  test.smt2
.github/workflows/: ocaml.yml  workflow.yml
_build/: .db  .digest-db  log
_build/default/: ADTReduction.dune-package  ADTReduction.install
_build/default/lib/: ADTReduction.cma  ADTReduction.cmxa  ADTReduction.cmxs
_build/default/lib/.merlin-conf/: lib-ADTReduction
_build/default/src/.merlin-conf/: exe-flatNNF
_build/default/test/.merlin-conf/: exe-ADTReduction
lib/: dune
src/: Context.ml  Fullreduction.ml  R1inline.ml  R2flatten.ml  R2rewrite.ml  R3flatten.ml  R3normalize.ml  R4normalize.ml  R4reduce_rules.ml  R5reduce_axioms.ml  R5reduce_rules.ml  R6reduce_axioms.ml  Typecheck.ml  dune  flatNNF.ml  flatten.ml
test/: dune  reduce.ml
test/scripts/: Graphs.ipynb  benchmarkreduction.py  parallel_benchmarkreduction.py  parallelbechmarksBarrett.py  quickcheck.py
test/scripts/.ipynb_checkpoints/: Graphs-checkpoint.ipynb
test/synthetic_list_tests/: fuzzing.py  manualreduction.py  parallel_benchmarkreduction.py
test/synthetic_list_tests/results/four_eight/: 0PostReduction.smt2  0PostSimpleReduction.smt2  0PreReduction.smt2  1000PostReduction.smt2  1000PostSimpleReduction.smt2  1000PreReduction.smt2  1001PostReduction.smt2  1001PostSimpleReduction.smt2  1001PreReduction.smt2  1002PostReduction.smt2  1002PostSimpleReduction.smt2  1002PreReduction.smt2  1003PostReduction.smt2  1003PostSimpleReduction.smt2  1003PreReduction.smt2  1004PostReduction.smt2  1004PostSimpleReduction.smt2  1004PreReduction.smt2  1005PostReduction.smt2  1005PostSimpleReduction.smt2  1005PreReduction.smt2  1006PostReduction.smt2  1006PostSimpleReduction.smt2  1006PreReduction.smt2  1007PostReduction.smt2  1007PostSimpleReduction.smt2  1007PreReduction.smt2  1008PostReduction.smt2  1008PostSimpleReduction.smt2  1008PreReduction.smt2  1009PostReduction.smt2  1009PostSimpleReduction.smt2  1009PreReduction.smt2  100PostReduction.smt2  100PostSimpleReduction.smt2  100PreReduction.smt2  1010PostReduction.smt2  1010PostSimpleReduction.smt2  1010PreReduction.smt2  1011PostReduction.smt2  (+29960 more)
test/synthetic_list_tests/results/four_four/: 0PostReduction.smt2  0PostSimpleReduction.smt2  0PreReduction.smt2  1000PostReduction.smt2  1000PostSimpleReduction.smt2  1000PreReduction.smt2  1001PostReduction.smt2  1001PostSimpleReduction.smt2  1001PreReduction.smt2  1002PostReduction.smt2  1002PostSimpleReduction.smt2  1002PreReduction.smt2  1003PostReduction.smt2  1003PostSimpleReduction.smt2  1003PreReduction.smt2  1004PostReduction.smt2  1004PostSimpleReduction.smt2  1004PreReduction.smt2  1005PostReduction.smt2  1005PostSimpleReduction.smt2  1005PreReduction.smt2  1006PostReduction.smt2  1006PostSimpleReduction.smt2  1006PreReduction.smt2  1007PostReduction.smt2  1007PostSimpleReduction.smt2  1007PreReduction.smt2  1008PostReduction.smt2  1008PostSimpleReduction.smt2  1008PreReduction.smt2  1009PostReduction.smt2  1009PostSimpleReduction.smt2  1009PreReduction.smt2  100PostReduction.smt2  100PostSimpleReduction.smt2  100PreReduction.smt2  1010PostReduction.smt2  1010PostSimpleReduction.smt2  1010PreReduction.smt2  1011PostReduction.smt2  (+29843 more)
test/synthetic_list_tests/results/two_four/: 0PostReduction.smt2  0PostSimpleReduction.smt2  0PreReduction.smt2  1000PostReduction.smt2  1000PostSimpleReduction.smt2  1000PreReduction.smt2  1001PostReduction.smt2  1001PostSimpleReduction.smt2  1001PreReduction.smt2  1002PostReduction.smt2  1002PostSimpleReduction.smt2  1002PreReduction.smt2  1003PostReduction.smt2  1003PostSimpleReduction.smt2  1003PreReduction.smt2  1004PostReduction.smt2  1004PostSimpleReduction.smt2  1004PreReduction.smt2  1005PostReduction.smt2  1005PostSimpleReduction.smt2  1005PreReduction.smt2  1006PostReduction.smt2  1006PostSimpleReduction.smt2  1006PreReduction.smt2  1007PostReduction.smt2  1007PostSimpleReduction.smt2  1007PreReduction.smt2  1008PostReduction.smt2  (+29240 more)
test/unit_tests/T4reduce_rules/: test2.smt2
test/unit_tests/T5reduce_axioms/: test1.smt2  test8.smt2
(+250 files in other folders)
