(library
  (name Context)
  (flags :standard -warn-error -A)
  (libraries smtlib-utils containers)
  (modules Context)
  (preprocess (pps landmarks-ppx --auto)))

(library
 (name R1inline)
 (flags :standard -warn-error -A)
 (libraries smtlib-utils Context)
 (modules R1inline)
 (preprocess (pps landmarks-ppx --auto)))

(library
 (name R4normalize)
 (flags :standard -warn-error -A)
 (libraries smtlib-utils R1inline R3flatten Context)
 (modules R4normalize)
 (preprocess (pps landmarks-ppx --auto)))

(library
 (name R5reduce_rules)
 (flags :standard -warn-error -A)
 (libraries smtlib-utils Context)
 (modules R5reduce_rules)
 (preprocess (pps landmarks-ppx --auto)))

(library
 (name R2rewrite)
 (flags :standard -warn-error -A)
 (libraries smtlib-utils R5reduce_rules Context)
 (modules R2rewrite)
 (preprocess (pps landmarks-ppx --auto)))

 (library
 (name R3flatten)
 (flags :standard -warn-error -A)
 (libraries smtlib-utils containers R5reduce_rules Context)
 (modules R3flatten)
 (preprocess (pps landmarks-ppx --auto)))

 (library
 (name R6reduce_axioms)
 (flags :standard -warn-error -A)
 (libraries smtlib-utils R1inline R2rewrite R3flatten R4normalize R5reduce_rules Context)
 (modules R6reduce_axioms)
 (preprocess (pps landmarks-ppx --auto)))

 (library
 (name Typecheck)
 (flags :standard -warn-error -A)
 (libraries smtlib-utils R1inline R3flatten R4normalize)
 (modules Typecheck)
 (preprocess (pps landmarks-ppx --auto)))

 (executable
 (name Fullreduction)
 (flags :standard -warn-error -A)
 (libraries smtlib-utils R1inline R3flatten R4normalize R5reduce_rules R6reduce_axioms Context)
 (modules Fullreduction)
 (preprocess (pps landmarks-ppx --auto)))
